tests/ui/aggregate_types/fail/bool_and_requires_postgres.stderr
error[E0277]: boolean aggregates are not supported for `drizzle::sqlite::types::Integer` on this dialect
 --> tests/ui/aggregate_types/fail/bool_and_requires_postgres.rs:5:22
  |
5 |     let _ = bool_and(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1"));
  |             -------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a boolean expression with a dialect that supports BOOL_AND/BOOL_OR
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `BooleanAggregatePolicy<drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Integer`
help: the trait `BooleanAggregatePolicy<drizzle_core::dialect::PostgresDialect>` is implemented for `drizzle::ddl::postgres::types::Boolean`
 --> core/src/expr/agg.rs
  |
  | impl BooleanAggregatePolicy<PostgresDialect> for PgBoolean {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `bool_and`
 --> core/src/expr/agg.rs
  |
  | pub fn bool_and<'a, V, E>(
  |        -------- required by a bound in this function
...
  |     E::SQLType: BooleanAggregatePolicy<V::DialectMarker>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `bool_and`

error[E0277]: this aggregate is not available for this dialect
 --> tests/ui/aggregate_types/fail/bool_and_requires_postgres.rs:5:13
  |
5 |     let _ = bool_and(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a dialect-specific alternative
  |
  = help: the trait `PostgresAggregateSupport` is not implemented for `drizzle_core::dialect::SQLiteDialect`
help: the trait `PostgresAggregateSupport` is implemented for `drizzle_core::dialect::PostgresDialect`
 --> core/src/expr/agg.rs
  |
  | impl PostgresAggregateSupport for PostgresDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `bool_and`
 --> core/src/expr/agg.rs
  |
  | pub fn bool_and<'a, V, E>(
  |        -------- required by a bound in this function
...
  |     V::DialectMarker: PostgresAggregateSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `bool_and`
